# datacenter-dataset

./: .env.example  .gitignore  README.md  SOURCES.md  pyproject.toml  requirements.txt
config/: settings.yaml  sources.yaml
data/manual/: curated_facilities.csv
data/processed/: address_geocode_candidates.csv  building_verification_results.csv  corrections_suggested.csv  data_quality_report.md  datacenters.geojson  datacenters.gpkg  datacenters_all.csv  datacenters_conus.csv  datacenters_conus_verified.csv  datacenters_final.csv  datacenters_non_conus.csv  independent_verification.csv  merge_log.json  needs_review.kml  needs_review_tracking.csv
data/raw/osm/: geom_query.txt  lifecycle_query.txt  osm_datacenters.json  osm_datacenters_geom.json  osm_datacenters_lifecycle.json  overpass_query.txt
data/raw/peeringdb/: fac_us.json
data/raw/wikidata/: datacenters_us.json
docs/: MANUAL_CURATION.md  PROGRESS_REPORT.md  TIER2_TOS_REPORT.md  data_dictionary.md
scripts/: apply_verification.py  consolidate_verification.py  independent_verify.py  make_review_kml.py  retry_failed.py  suggest_corrections.py
src/dcdata/: classify.py  export.py  pipeline.py  schema.py
src/dcdata/collectors/: base.py  manual.py  osm.py  osm_lifecycle.py  peeringdb.py  wikidata.py
src/dcdata/enrich/: footprint.py
src/dcdata/geocode/: base.py  census.py  reverse.py
src/dcdata/resolve/: dedup.py
tests/: test_dedup.py  test_footprint.py  test_osm.py  test_osm_lifecycle.py  test_peeringdb.py  test_precision.py  test_reverse.py  test_schema.py  test_wikidata.py
(+1 files in other folders)
